# chip8

c/: CMakeLists.txt  Makefile
c/include/: audio.h  chip8.h  cpu.h  graphics.h  input.h  instr.h
c/scripts/: build.sh  clean.sh
c/src/: audio.c  chip8.c  cpu.c  graphics.c  input.c  main.c
zig/: .gitignore  build.zig  build.zig.zon
zig/src/: chip8.zig  graphics.zig  input.zig  main.zig  sdl.zig
